# scnrtest

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs  v1_veryl_scanner.rs
data/: cpp_comment_modes.json  cpp_comment_modes.modes  cpp_comment_modes_modes.json  html_comment.modes  html_comment_modes.json  json_parser_modes.json  keywords2_modes.json  parol_1_comment_modes.json  parol_2_comment_modes.json  parol_comment_modes.json  parol_modes.json  scanner_modes_modes.json  temp_modes.json  veryl_modes.json
data/input/: big2.veryl
src/: arguments.rs  main.rs
