[package]
name = "scnrtest"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo = "0.85.0"
clap = { version = "4.5.27", features = ["derive", "cargo"] }
env_logger = "0.11.6"
scnr = { version = "0.7.1", path = "../scnr" }
serde_json = "1.0.137"

[dev-dependencies]
criterion = "0.5.1"
parol_runtime = "1.0.2"

[profile.release]
opt-level = 3
lto = true
debug = true

[[bench]]
name = "benchmark"
harness = false

