[package]
name = "scnrtest"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "cargo"] }
env_logger = "0.11.6"

# Use the regex_automata feature to enable the regex_automata crate
# scnr = { version = "0.8.0", features = ["regex_automata"], default-features = false }
# scnr = { path = "../scnr/scnr", version = "0.9.0", default-features = false }

# Or use scnr with the default features
scnr = "0.8.0"

serde_json = "1.0.139"

[dev-dependencies]
criterion = "0.5.1"
# For comparison with the scnr crate in benchmarks
parol_runtime = "^1.0.2"

[profile.release]
opt-level = 3
lto = true
debug = true

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["scnr/default"]
regex_automata = ["scnr/regex_automata"]
